--- a/project/bundles/3rdparty/CMakeLists.txt
+++ b/project/bundles/3rdparty/CMakeLists.txt
@@ -130,6 +130,7 @@ add_subdirectory(ext_libgphoto2)
 add_subdirectory(ext_libass)
 add_subdirectory(ext_libicu)
 add_subdirectory(ext_liblqr)
+add_subdirectory(ext_libjxl)
 add_subdirectory(ext_sane)
 add_subdirectory(ext_exiv2)
 add_subdirectory(ext_boost)
