--- a/project/bundles/3rdparty/ext_libjxl/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_libjxl/CMakeLists.txt
@@ -22,7 +22,7 @@ if(MINGW)
         GIT_REPOSITORY https://github.com/libjxl/libjxl.git
         GIT_TAG v0.6.1
 
-        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/jxl-lib-only.patch
+        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/jxl-lib-mxe.patch
 
         CONFIGURE_COMMAND git submodule update --init --recursive --depth 1 --recommend-shallow &&
                           cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
@@ -30,7 +30,12 @@ if(MINGW)
 
         BUILD_COMMAND cd <SOURCE_DIR>/build.mxe && $(MAKE) -j
 
-        INSTALL_COMMAND cd <SOURCE_DIR>/build.mxe && $(MAKE) install/fast
+        INSTALL_COMMAND cd <SOURCE_DIR>/build.mxe && $(MAKE) install/fast &&
+                        cp -f <SOURCE_DIR>/build.mxe/third_party/brotli/libbrotlicommon.dll ${PREFIX_ext_libjxl}/bin &&
+                        cp -f <SOURCE_DIR>/build.mxe/third_party/brotli/libbrotlidec.dll    ${PREFIX_ext_libjxl}/bin &&
+                        cp -f <SOURCE_DIR>/build.mxe/third_party/brotli/libbrotlienc.dll    ${PREFIX_ext_libjxl}/bin &&
+                        mv -f ${PREFIX_ext_libjxl}/lib/libjxl.dll                           ${PREFIX_ext_libjxl}/bin &&
+                        mv -f ${PREFIX_ext_libjxl}/lib/libjxl_threads.dll                   ${PREFIX_ext_libjxl}/bin
 
         BUILD_IN_SOURCE 1
 
