--- a/project/bundles/3rdparty/CMakeLists.txt
+++ b/project/bundles/3rdparty/CMakeLists.txt
@@ -128,6 +128,7 @@ add_subdirectory(ext_fontconfig)
 add_subdirectory(ext_freetype)
 add_subdirectory(ext_libgphoto2)
 add_subdirectory(ext_libass)
+add_subdirectory(ext_libavif)
 add_subdirectory(ext_libicu)
 add_subdirectory(ext_liblqr)
 add_subdirectory(ext_libjxl)
