Add libaom dependency for AppImage CCBUGS: 109060

--- a/project/bundles/3rdparty/ext_libavif/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_libavif/CMakeLists.txt
@@ -59,8 +59,6 @@ if(MINGW)
         GIT_REPOSITORY https://aomedia.googlesource.com/aom
         GIT_TAG v3.3.0
 
-#        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/de265-lib-mxe.patch
-
         CONFIGURE_COMMAND cp -f ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.mxe <SOURCE_DIR>/. &&
                           <SOURCE_DIR>/bootstrap.mxe ${MXE_BUILDROOT} RelWithDebInfo ${BASH_OPTIONS_AOM}
 
@@ -99,7 +97,27 @@ if(MINGW)
 
 elseif(APPLE)
 
+    ExternalProject_Add(libaom
+
+        DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
+        GIT_REPOSITORY https://aomedia.googlesource.com/aom
+        GIT_TAG v3.3.0
+
+#        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/de265-lib-linux.patch
+
+        CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_libavif}
+                   -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE}
+                   ${GLOBAL_PROFILE}
+
+        BUILD_IN_SOURCE 1
+
+        UPDATE_COMMAND ""
+        ALWAYS 0
+    )
+
     ExternalProject_Add(ext_libavif
+        DEPENDS libaom
+
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 
         # To use official release tarball
@@ -124,7 +142,28 @@ elseif(APPLE)
 
 else() # Linux
 
+    ExternalProject_Add(libaom
+
+        DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
+        GIT_REPOSITORY https://aomedia.googlesource.com/aom
+        GIT_TAG v3.3.0
+
+#        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/de265-lib-linux.patch
+
+        CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_libavif}
+                   -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE}
+                   ${GLOBAL_PROFILE}
+
+        BUILD_IN_SOURCE 1
+
+        UPDATE_COMMAND ""
+        ALWAYS 0
+    )
+
+
     ExternalProject_Add(ext_libavif
+        DEPENDS libaom
+
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 
         GIT_REPOSITORY https://github.com/AOMediaCodec/libavif.git
