AppImage: start to include ffmpeg 4.4.1 with plenty of updated codec, instead to use older one from Mageia7

--- a/project/bundles/3rdparty/ext_ffmpeg/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_ffmpeg/CMakeLists.txt
@@ -16,8 +16,8 @@ SET(PREFIX_ext_ffmpeg "${EXTPREFIX}")
 
 ExternalProject_Add(ext_ffmpeg
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://ffmpeg.org/releases/ffmpeg-3.3.6.tar.xz
-    URL_MD5 e7701ebfce77e44f7b4cc57dd001e7eb
+    URL https://ffmpeg.org/releases/ffmpeg-4.4.1.tar.xz
+    URL_MD5 41a1ca8693acc56088e8eaf3899b91ea
 
     CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${PREFIX_ext_ffmpeg}
                                              --datadir=${CMAKE_BINARY_DIR}/etc
@@ -28,7 +28,6 @@ ExternalProject_Add(ext_ffmpeg
                                              --disable-doc
                                              --disable-debug
                                              --disable-ffplay
-                                             --disable-ffserver
                                              --disable-outdevs
                                              --enable-runtime-cpudetect
                                              --extra-libs=-lstdc++
@@ -49,6 +48,7 @@ ExternalProject_Add(ext_ffmpeg
                                              --enable-libass
                                              --enable-openssl
 
+    INSTALL_COMMAND ""
     UPDATE_COMMAND ""
     ALWAYS 0
 )
