Depending of the Exiv2 version, the C++ standard to support is not the same: git master (main) : version = 1.0.0 => C++17 git 0.27-maintenance branch = 0.27.x => C++11

--- a/core/libs/metadataengine/CMakeLists.txt
+++ b/core/libs/metadataengine/CMakeLists.txt
@@ -122,7 +122,7 @@ if(NOT Qt6_FOUND)
 
     set_target_properties(core_dmetadata_obj
                           PROPERTIES
-                          CXX_STANDARD 11
+                          CXX_STANDARD ${EXIV2_CXX_STANDARD}
                           CXX_STANDARD_REQUIRED YES
                           CXX_EXTENSIONS NO
     )
