--- a/project/bundles/3rdparty/CMakeLists.txt
+++ b/project/bundles/3rdparty/CMakeLists.txt
@@ -125,6 +125,8 @@ add_subdirectory(ext_png)
 add_subdirectory(ext_tiff)
 add_subdirectory(ext_heif)
 add_subdirectory(ext_libgphoto2)
+add_subdirectory(ext_libde265)
+add_subdirectory(ext_libaom)
 add_subdirectory(ext_libavif)
 add_subdirectory(ext_libicu)
 add_subdirectory(ext_liblqr)
