--- a/project/bundles/3rdparty/CMakeLists.txt
+++ b/project/bundles/3rdparty/CMakeLists.txt
@@ -129,6 +129,7 @@ add_subdirectory(ext_libavif)
 add_subdirectory(ext_libicu)
 add_subdirectory(ext_liblqr)
 add_subdirectory(ext_libjxl)
+add_subdirectory(ext_libde265)
 add_subdirectory(ext_sane)
 add_subdirectory(ext_exiv2)
 add_subdirectory(ext_boost)
