Windows build using MXE: Build ffmpeg 4.4.1 with same optimiztions than AppImage. Do not use MXE ffmpeg build as it do not include non-free and x265 codecs. BUGS: 386522 BUGS: 418266 FIXED-IN: 7.7.0

--- a/project/bundles/3rdparty/ext_ffmpeg/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_ffmpeg/CMakeLists.txt
@@ -12,42 +12,63 @@
 #       https://trac.ffmpeg.org/wiki/CompilationGuide/Ubuntu
 #
 
-SET(PREFIX_ext_ffmpeg "${EXTPREFIX}")
+set(PREFIX_ext_ffmpeg "${EXTPREFIX}")
+
+set(FFmpeg_Conf --prefix=${PREFIX_ext_ffmpeg}
+                --extra-libs=-lstdc++
+                --disable-doc
+                --disable-debug
+                --disable-programs
+                --disable-outdevs
+                --enable-shared
+                --enable-gpl
+                --enable-version3
+                --enable-nonfree
+                --enable-runtime-cpudetect
+                --enable-libopencore-amrnb
+                --enable-libopencore-amrwb
+                --enable-libfdk-aac
+                --enable-libmp3lame
+                --enable-libspeex
+                --enable-libtheora
+                --enable-libvorbis
+                --enable-libx264
+                --enable-libx265
+                --enable-libaom
+                --enable-libxvid
+                --enable-libvpx
+                --enable-libopus
+                --enable-librtmp
+                --enable-libfreetype
+                --enable-libass
+                --enable-opengl
+)
+
+if(MINGW)
+
+    set(YASM_EXE ${MXE_BUILDROOT}/usr/bin/${MXE_BUILD_TARGETS}-yasm)
+    message(STATUS "Yasm binary: ${YASM_EXE}")
+
+    set(FFmpeg_Conf ${FFmpeg_Conf}
+                    --cross-prefix=${MXE_BUILD_TARGETS}-
+                    --enable-cross-compile
+                    --arch=x86_64
+                    --target-os=mingw32
+                    --disable-static
+                    --enable-shared
+                    --yasmexe=${YASM_EXE}
+                    --disable-pthreads
+                    --enable-w32threads
+    )
+
+endif()
 
 ExternalProject_Add(ext_ffmpeg
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
     URL https://ffmpeg.org/releases/ffmpeg-4.4.1.tar.xz
     URL_MD5 41a1ca8693acc56088e8eaf3899b91ea
 
-    CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${PREFIX_ext_ffmpeg}
-                                             --extra-libs=-lstdc++
-                                             --disable-doc
-                                             --disable-debug
-                                             --disable-programs
-                                             --disable-outdevs
-                                             --enable-shared
-                                             --enable-gpl
-                                             --enable-version3
-                                             --enable-nonfree
-                                             --enable-runtime-cpudetect
-                                             --enable-libopencore-amrnb
-                                             --enable-libopencore-amrwb
-                                             --enable-libfdk-aac
-                                             --enable-libmp3lame
-                                             --enable-libspeex
-                                             --enable-libtheora
-                                             --enable-libvorbis
-                                             --enable-libx264
-                                             --enable-libx265
-                                             --enable-libaom
-                                             --enable-libxvid
-                                             --enable-libvpx
-                                             --enable-libopus
-                                             --enable-librtmp
-                                             --enable-libfreetype
-                                             --enable-libass
-                                             --enable-opengl
-
+    CONFIGURE_COMMAND <SOURCE_DIR>/configure ${FFmpeg_Conf}
     UPDATE_COMMAND ""
     ALWAYS 0
 )
