--- a/core/dplugins/generic/webservices/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/CMakeLists.txt
@@ -33,10 +33,10 @@ endif()
 
 add_subdirectory(smugmug)
 add_subdirectory(twitter)
-add_subdirectory(yandexfotki)
+#add_subdirectory(yandexfotki)
 
 if(KF5KIO_FOUND)
-    add_subdirectory(vkontakte)
+#    add_subdirectory(vkontakte)
     add_subdirectory(filetransfer)
 endif()
 
